Bug 520098 - Darwin build fails on new quota check from bug 72892 (nsLocalFileUnix.cpp). r=bsmedberg