xpcom/io/nsLocalFileUnix.cpp
@@ -68,7 +68,9 @@
 #endif
 
 #if defined(HAVE_SYS_QUOTA_H)
+#if defined(HAVE_SYS_SYSMACROS_H)
 #include <sys/sysmacros.h>
+#endif
 #include <sys/quota.h>
 #endif
 
@@ -1231,7 +1233,7 @@ nsLocalFile::GetDiskSpaceAvailable(PRInt64 *aDiskSpaceAvailable)
      */
     *aDiskSpaceAvailable = (PRInt64)fs_buf.f_bsize * (fs_buf.f_bavail - 1);
 
-#if defined(HAVE_SYS_STAT_H) || defined(HAVE_SYS_QUOTA_H)
+#if defined(HAVE_SYS_STAT_H) || defined(HAVE_SYS_SYSMACROS_H)
 
     if(!FillStatCache()) {
         // Return available size from statfs
